# Go_GAPTUI

./: .env.example  .gitignore  README.md  config.toml  go.mod  go.sum  run.sh
.omc/: project-memory.json
.omc/sessions/: d6af4948-c484-4f8f-9fc5-5d47abc08df5.json
claude/: DESIGN_SPEC.md  Gap_Strategy.md  UI_TECHNICAL_DOCUMENTATION.md  claude.md  instructions.md  orderbook_slippage.md  performance_improvements.md  rules.md  scenario.md  sequence.md  spec.md  task.md  test.md
cmd/kimchi/: main.go
internal/background/: runner.go
internal/config/: config.go
internal/db/: db.go
internal/exchanges/: auth.go  http_client.go  orderbook_processor.go  orderbook_ws.go  symbol_fetcher.go  ticker_ws.go
internal/ipc/: protocol.go  server.go
internal/models/: coin_state.go  db.go  exchange.go  orderbook.go  scenario.go  snapshot.go  ticker.go  wallet.go
internal/monitor/: kimchi_monitor.go  scenario_detector.go
internal/transfer/: address_book.go  chain_mapping.go  executor.go  state.go
tui_textual/: README.md  pyproject.toml
tui_textual/kimchi_tui/: __init__.py  __main__.py
tui_textual/src/kimchi_tui/: __init__.py  __main__.py  app.py  colors.py  formatters.py  indicators.py  ipc_client.py  models.py
tui_textual/src/kimchi_tui/screens/: __init__.py  dw_status.py  logs.py  monitor.py  scenarios.py  transfer.py
tui_textual/src/kimchi_tui/styles/: dark.tcss  light.tcss
tui_textual/src/kimchi_tui/widgets/: __init__.py  card_view.py  coin_table.py  detail_panel.py  filter_bar.py  header_bar.py  scenario_panel.py  status_bar.py
