[project]
name = "kimchi-tui"
version = "0.1.0"
description = "Kimchi Premium Monitor - Textual TUI"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "websockets>=12.0",
    "rich>=13.0",
]

[project.scripts]
kimchi-tui = "kimchi_tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kimchi_tui"]
